Исправлена опечатка в object.css

--- a/css/object.css
+++ b/css/object.css
@@ -25,7 +25,7 @@ body{height: 100%;width:100%;}
 }
 .wrap_bt{
 	width:100%;
-	overflow:hidden:
+	overflow:hidden;
 }
 .info_brd_L{
 	display:inline-block;
