--- a/css/object.css
+++ b/css/object.css
@@ -49,7 +49,10 @@ body{height: 100%;width:100%;}
     text-align: center; 
     height: 100%;
 }
-
+.pbs_link input{
+    display: block; 
+    height: 100%;
+}
 .info{
 	width:99%;
 	margin:10px 0px;
@@ -128,6 +131,7 @@ select {
 	}
 input{
 	width: 100%;
+    border: 0;
 }
 
 button{
